# square

./: .deepsource.toml  .gitignore  README.md  README.rst  pyproject.toml  tox.ini
square/: ABC.py  __init__.py  card.py  client.py  customer.py  enums.py  errors.py  group.py  helpers.py  http.py  objects.py  segment.py
tests/: test_http.py  test_tox.py
